src/objects/DeviceCountryAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Device Countries</relationshipLabel>
        <relationshipName>R00N40000001hPeBEAU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <formula>Device__r.Device_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_SA_Status__c</fullName>
        <formula>Device__r.SA_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Device_SA_Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>R00N40000001hPe1EAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NPI_Country__c</fullName>
        <formula>Device__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPI_Country</label>
        <type>Text</type>
    </fields>
    <label>Device Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DevReg-{0000}</displayFormat>
        <label>Device Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>